теперь в случае удаления записи она не отображается в списках.
